# tometo

./: .arcconfig  .babelrc  .build.yml  .ci.yml  .drone.yml  .editorconfig  .env.example  .eslintrc.json  .gitignore  .gitlab-ci.yml  .hgignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Vagrantfile  buildkite.yml  config.example.json  config.example.toml  index.html  mix.exs  package-lock.json  package.json  playbook.yml  site.yml  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
.buildkite/: pipeline.yml
aph/: README.md  mix.exs
aph/config/: config.example.exs  config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
aph/lib/aph/: accounts.ex  application.ex  mailer.ex  (+3 more)
aph/test/: test_helper.exs
config/: config.example.exs  config.exs  dev.example.exs  prod.exs  releases.exs
deploy/: metomo.yml  omotem.yml  otemot.yml  site.yml  tometo.yml
deploy/group_vars/: all
deploy/inventory/: example
lib/: aph.ex  aph_web.ex
lib/aph/: mailer.ex  release.ex  repo.ex  tts.ex
lib/aph_web/: endpoint.ex  router.ex
otemot/: .env.example  Cargo.toml  README.md  tts.js
otemot/migrations/2019-04-20-201633_users/: up.sql
otemot/migrations/2019-04-27-192256_create_status/: down.sql  up.sql
otemot/migrations/2019-07-19-105413_make_username_unique/: down.sql  up.sql
otemot/migrations/2019-07-19-105811_create_avatar/: down.sql  up.sql
otemot/migrations/2019-07-19-110357_adjust_status_for_avatar/: down.sql  up.sql
otemot/src/: actor.rs  db.rs  error.rs  errors.rs  main.rs  messages.rs  schema.rs  token.rs  tts.rs
otemot/src/api/: auth.rs  avatar.rs  mod.rs  status.rs
otemot/src/avatar/: mod.rs  model.rs
otemot/src/handlers/: avatar.rs  mod.rs  status.rs  user.rs
otemot/src/models/: avatar.rs  mod.rs  status.rs
otemot/src/status/: mod.rs  model.rs
otemot/src/storage/: local.rs  mod.rs  s3.rs
otemot/src/user/: mod.rs  model.rs  token.rs
otemot/src_old/: messages.rs
otemot/src_old/api/: home.rs  mod.rs
otemot/src_old/handlers/: status.rs
otemot/src_old/models/: avatar.rs  mod.rs  user.rs
otemot/src_old/storage/: mod.rs
script/: build  cisetup  fix  lint  localsetup  release  run  run_b  run_f  vagrant-run  vagrant-watch  watch
src/: App.vue  Header.vue  custom.scss  index.js  index.jsx  router.js  store.js
src/components/: CreateAvatar.vue  CreateStatus.vue  EditAvatar.vue  GetStatus.vue  Home.vue  Login.vue  NewStatus.vue  Register.vue  StatusDisplay.vue  TheHeader.vue
src/scss/: base.scss  button.scss  form.scss  grid.scss  index.scss  misc.scss  nav.scss
src/service/: auth.js  avatar.js  status.js
src/store/: index.js
ui/: .babelrc  .eslintrc.json  postcss.config.js  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.dev.vagrant.js  webpack.prod.js
ui/public/: admin.html  index.html
ui/src/: App.vue  Base.svelte  actions.js  admin.build.js  admin.js  api.js  index.js  main.build.js  router.js  stores.js  threeManager.js  utils.js
(+215 files in other folders)
