[package]
name = "otemot"
version = "0.1.0"
authors = ["marisa <marisa@mokou.zone>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["json"], default-features = false }
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono"] }
config = { version = "0.9.3", features = ["json"], default-features = false }
serde = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4.7", features = ["serde"] }
bcrypt = "0.4"
md5 = "0.6"
# actix-web = "1.0"
# actix = "0.8"
# actix-files = "0.1"
# actix-cors = "0.1"
# actix-rt = "0.2"
# diesel = { version = "1.4", features = ["postgres", "uuid", "serde_json", "r2d2", "chrono"] }
# chrono = { version = "0.4", features = ["serde"] }
# uuid = { version = "0.6", features = ["serde", "v4"] }
# r2d2 = "0.8"
# serde = "1.0"
# serde_derive = "1.0"
# bcrypt = "0.4"
# md5 = "0.6"
# ring = "0.14"
# serde_json = "1.0"
# futures = "0.1"
# env_logger = "0.6"
# sentry = "0.15"
# sentry-actix = "0.15"
# derive_more = "0.15"
# actix-identity = "0.1"
# jsonwebtoken = "6.0"
# sensitive_words = "1.0"
# config = { version = "0.9", features = ["json"], default-features = false }
