[package]
name = "otemot"
version = "0.1.1"
authors = ["marisa <marisa@mokou.zone>"]
edition = "2018"

[features]
s3 = ["rusoto_core", "rusoto_s3"]

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["json", "serve"], default-features = false }
rocket_cors = "0.5"
rocket-multipart-form-data = "0.7"
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono"] }
config = { version = "0.9.3", features = ["toml"], default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4.7", features = ["serde"] }
bcrypt = "0.4"
md5 = "0.6"
jsonwebtoken = "5.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
rusoto_core = { version = "0.40", optional = true }
rusoto_s3 = { version = "0.40", optional = true }
either = "1.5"
futures = "0.1"
log = "0.4.0"
env_logger = "0.6.2"
mailchecker = "3.3.1"
isahc = { version = "0.8", features = ["json"] }
base64 = "0.11"
